book and author

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,10 +20,9 @@
 
 
 
-<!--
+
 <app-nav></app-nav>
 <router-outlet></router-outlet>
-<app-footer></app-footer>-->
+<app-footer></app-footer>
 <!--<app-book></app-book>-->
-<app-author></app-author>
-<!-- <app-book></app-book> -->
+<!-- <app-author></app-author> -->
