--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -31,15 +31,11 @@
               <h5>سياسة الخصوصية </h5>
               <h5> أتصل بنا</h5>
               <div class="row text-right">
-                  <div class="col-3 "></div>
-                <div class="col-3"><div class="f text-center p-2">f</div>
-                  <!-- <i class="fab fa-facebook"></i> -->
-                </div>
-                <div class="col-3"><div class="t text-center p-2">t</div>
-                  <!-- <i class="fab fa-twitter"></i> -->
-                </div>
-                <div class="col-3"> <div class="g text-center p-2">G+</div>
-                   <!-- <i class="fab fa-google-plus"></i> -->
+                  <div class="col-sm-4"></div>
+                  <div class="col-sm-8">
+                        <img src="assets/facebook.png">
+                        <img src="assets/twitter.png" class="mx-2">
+                        <img src="assets/google.png">
                   </div>
               </div>
           </div>
