--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,6 +1,8 @@
 nav{
+    i{
+        color: white;
+    }
     background-color: #533a4f;
-    // margin-bottom: 50px;
     .navbar-brand{
         font-family: Alfarooq-Regular;
         color: white;
@@ -23,8 +25,3 @@ nav{
         color: white;
     }
 }
-
-// @font-face{
-//     font-family: logo;
-//     src:url("..C:/Users/iso/Desktop/f-pro/gholaf/fonts/Alfarooq.ttf");
-// }
