--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -1,11 +1,38 @@
-table { 
-    width: 60%; 
+.container{
+	width: 60%;
+	table { 
+    width: 100%; 
     border-collapse: collapse;
     margin:0 auto;
     // text-align: center; 
-    
-  }
-  
+    // .mar{
+		// 	margin: 0 auto;
+		// }
+	}
+	.col-sm-3 , .col-sm-2{
+		margin: 0 auto;
+	}
+	button{
+		background-color: #177777;
+		color: white;
+		font-family: Noto Naskh Arabic;
+		margin: 0 auto;
+}
+
+.addColor{
+	color: #177777;
+	font-size: 20px;
+	font-family: paragrafs;
+	display: inline-block;
+}
+  .addBorder{
+		border: 2px solid #177777;
+		border-radius: 5px;
+		p{
+			
+			margin: 0px;
+		}
+	}
   tr:nth-of-type(odd) { 
     background: #eee; 
   }
@@ -32,7 +59,16 @@ table {
   }
   img{
       height: 150px;
-  }
+	}
+	input[type=checkbox]{
+		width: 20px;
+		height: 20px;
+	
+	}
+	
+
+}
+
 
 
   @media only screen and (max-width: 760px),(min-device-width: 768px) and (max-device-width: 1024px)  {
@@ -77,7 +113,7 @@ table {
 	td:nth-of-type(2):before { content: "الكود "; }
 	td:nth-of-type(3):before { content: " السعر "; }
 	td:nth-of-type(4):before { content: "الكمية "; }
-	td:nth-of-type(5):before { content: "Wars of Trek?"; }
+	td:nth-of-type(5):before { content: " الكتاب "; }
 	td:nth-of-type(6):before { content: "Porn Name"; }
 	td:nth-of-type(7):before { content: "Date of Birth"; }
 	td:nth-of-type(8):before { content: "Dream Vacation City"; }
