--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -38,3 +38,8 @@ footer{
         margin-bottom: 0px;
     }
 }
+@media (max-width: 570px) {
+.col-sm-5 ,.col-sm-3 {
+        margin-bottom: 30px;
+    }
+}
