--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -13,10 +13,10 @@
 
 
 <!-- <header> -->
-    <nav class="navbar navbar-expand-lg navbar-black">
-        <div class="container text-dark">
+    <nav class="navbar navbar-expand-lg  ">
+        <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"><i class="fas fa-align-justify"></i></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
                 <form class="form-inline my-2 my-lg-0">
