--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -40,7 +40,7 @@
 
   <div class="col-sm-3 mb-2 text-center ">
     <!-- btn-block -->
-    <button class="btn y  btn-block btn-lg"> متابعة الشراء </button>
+    <button class="btn y  btn-block btn-lg" routerLink="/payment"> متابعة الشراء </button>
 </div>
 </div>   
 </section>
