--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -54,6 +54,7 @@
                               </tr>
                           </tbody>
                   </table>
+                  <button type="button" class="btn text-white  btn-lg mx-5 my-5">الحفظ و الاستمرار</button>
 
               </ng-template>
             </ngb-panel>
