--- a/src/app/famousauthors/famousauthors.component.html
+++ b/src/app/famousauthors/famousauthors.component.html
@@ -1,23 +1,29 @@
 
 <div class="container mb-5 section">
     <div class="row">
-      <div class="col-lg-3" *ngFor="let i of Arr(num).fill(1)">
+      <div class="col-lg-3 col-md-6 col-sm-8" *ngFor="let i of Arr(num).fill(1)">
         <div class="card mb-4">
           <div class="image-container mb-3">
             <div class="overlay">	
               <i class="far fa-heart"></i>
               <button><i class="fas fa-shopping-cart"></i></button>
             </div>
-            <img class="card-img-top" src="assets/زوجة احمد.jpg" alt="Card image cap">
+            <img  src="assets/زوجة احمد.jpg"  alt="Card image cap">
           </div>
           <div class="card-body p-0"> 
-              <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="far fa-star"></i>
+              <div class="rate">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
               <h5 class="card-title text-right">الاسود يليق بك</h5>
               <h6 class="text-right">احلام مستغانمى</h6>
+              <div class="addToCart">
+                <i class="fas fa-shopping-cart mr-2"></i>
+                <i class="far fa-heart"></i>
+              </div>
           </div>
         </div>
       </div>
