--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,7 +1,6 @@
 <div class="container">
-  <div class="row">
-     <div class="col-sm-2"></div>
-      <div class="col-sm-8 col-lg-8 text-center">
+  <div class="row paytable">
+      <div class="col-sm-12 col-md-10 col-lg-8 text-center">
 
           <ngb-accordion [closeOthers]="true" activeIds="static-1">
             <ngb-panel id="static-1" title="بياناتك">
@@ -90,7 +89,6 @@
           </ngb-accordion>
 
       </div>
-     <div class="col-sm-2"></div>
   </div>
 </div>
 
