--- a/src/app/bestseller/bestseller.component.html
+++ b/src/app/bestseller/bestseller.component.html
@@ -1,22 +1,23 @@
 <div class="container mb-5 section">
     <div class="row">
-      <div class="col-lg-3" *ngFor="let i of Arr(num).fill(1)">
+      <div class="col-lg-3" *ngFor="let mostseller of mostseller">
         <div class="card mb-4">
           <div class="image-container mb-3">
             <div class="overlay">	
               <i class="far fa-heart"></i>
               <button><i class="fas fa-shopping-cart"></i></button>
             </div>
-            <img class="card-img-top" src="assets/فى بيتنا راجل.jpg" alt="Card image cap">
+            <img class="card-img-top" src="{{mostseller.img}}" class="img-fluid"  alt="Card image cap">
           </div>
           <div class="card-body p-0"> 
               <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="far fa-star"></i>
-              <h5 class="card-title text-right">الاسود يليق بك</h5>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="far fa-star"></i>
+              <h5 class="card-title text-right">{{mostseller.bname}} </h5>
               <h6 class="text-right">احلام مستغانمى</h6>
+              <h6 class="text-right">{{mostseller.numselling}} </h6>
           </div>
         </div>
       </div>
