--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,12 @@
 
 
 <header class="text-white">
-    <div class="table">
+    <div class="table animated flip">
       <div class="cell">
-        <h1> غلاف </h1>
+        <h1 class="animated infinite bounce"> غلاف </h1>
         <p>إذا شعرت وأنت تقلب الصفحة الأخيرة في الكتاب الذي تقرأه أنك فقدت صديقاً عزيزاً فأعلم أنك قد قرأت كتاباً رائعا</p>
         <div class="col-sm-6 offset-md-3">
-            <div class="input-group">
+            <div class="input-group rotateInDownLeft">
               <div class="input-group-prepend border-0">
                 <span class="input-group-text pr-3 pl-3 text-white" id="" aria-label="Large">بحث 
                 </span>
