--- a/src/app/mostdownloaded/mostdownloaded.component.html
+++ b/src/app/mostdownloaded/mostdownloaded.component.html
@@ -21,7 +21,7 @@
               <i class="far fa-star"></i>
             </div>
               <h5 class="card-title text-right">{{mostdownloaded.bname}} </h5>
-              <h6 class="text-right">احلام مستغانمى</h6>
+              <h6 class="text-right"> {{mostdownloaded.aname}} </h6>
               <h6 class="text-right">{{mostdownloaded.numdownloads}} </h6>
               <!-- <p>{{mostdownloaded.bname}}</p> -->
               <div class="addToCart">
