--- a/src/app/bestseller/bestseller.component.html
+++ b/src/app/bestseller/bestseller.component.html
@@ -18,7 +18,7 @@
                 <i class="far fa-star"></i>
               </div>
               <h5 class="card-title text-right">{{mostseller.bname}} </h5>
-              <h6 class="text-right">احلام مستغانمى</h6>
+              <h6 class="text-right"> {{mostseller.aname}} </h6>
               <h6 class="text-right">{{mostseller.numselling}} </h6>
           </div>
           <div class="addToCart">
