--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -33,8 +33,21 @@ header p{
     font-family: paragrafs;
     font-size: 30px;
 }
-
-
+input{
+    border-bottom-left-radius: 0px;
+    border-top-left-radius: 0px;
+}
+.input-group-prepend{
+    width: 100%;
+}
+.submit{
+    position: static;
+    width: 100px;
+    text-align: center;
+}
+.submit:hover{
+    cursor: pointer;
+}
 p,input,.input-group-text{
     font-family:'Noto Naskh Arabic';
     font-size: 20px;
@@ -63,3 +76,92 @@ p,input,.input-group-text{
         }
     }
 }
+
+.row{
+	justify-content: center;
+}
+h6{
+	font-family:  paragrafs;
+	display:inline-block;
+}
+h5{
+	font-family:  paragrafs;
+	display: inline;
+    margin-left: 33px;
+}
+.card.mb-4{
+	border: none;
+}
+.fa-star:before{
+	color:yellow;
+}
+.overlay .far.fa-heart{
+	font-size: 2rem;
+    color: #177777;
+    position: absolute;
+    top: 30px;
+    right: 15px;
+}
+.image-container{
+    position: relative;
+}
+img{
+	opacity: 1;
+	display: block;
+	width: 100%;
+	height: auto;
+	transition: .5s ease;
+	backface-visibility: hidden;
+}
+.overlay{
+	transition: .5s ease;
+  	opacity: 0;
+ 	position: relative;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	text-align: center;
+}
+.image-container:hover img {
+  opacity: 0.3;
+  cursor: pointer;
+}
+.image-container:hover .overlay {
+  opacity: 1;
+}
+button{
+	position: absolute;
+    top: 290px;
+    width: 100%;
+    left: 0;
+    background-color:#177777;
+    color:white;
+    height:60px;
+    font-size:30px;
+}
+img{
+	height:350px;
+}
+.card-body.p-0{
+	text-align:right;
+}
+.rate{
+	// display:inline-block;
+	float:left;
+}
+
+.addToCart{
+	display:none;
+}
+@media (max-width: 992px){
+ 	.addToCart{
+ 		// display:inline-block;
+ 		float:left;
+ 		color:#177777;
+ 		font-size:20px;
+ 	}
+ 	.overlay{
+ 		display:none;
+ 	}
+ }
