--- a/src/app/newestbooks/newestbooks.component.html
+++ b/src/app/newestbooks/newestbooks.component.html
@@ -20,7 +20,7 @@
               <i class="far fa-star"></i>
             </div>
               <h5 class="card-title text-right">{{newest.bname}} </h5>
-              <h6 class="text-right">احلام مستغانمى</h6>
+              <h6 class="text-right"> {{newest.aname}} </h6>
               <h6 class="text-right">{{newest.datepublish}} </h6>
           </div>
               <div class="addToCart">
