--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -4,7 +4,7 @@
         <div class="row col-sm-12">
             <div class="col-sm-4 animated bounceInLeft">
                     <div class="carousel-item active">
-                      <img class="d-block w-100" src="assets/team1.png" alt="First slide">
+                      <img class="d-block team w-100" src="assets/imgs/team/hayam.PNG" alt="First slide">
                     </div>
                   <div class="team-member-info text-center">
                     <h4 class="member-name mb-3">هيام محفوظ</h4>
@@ -16,7 +16,7 @@
 
             <div class="col-sm-4 animated zoomIn">
                     <div class="carousel-item active">
-                      <img class="d-block w-100" src="assets/team2.png" alt="Second slide">
+                      <img class="d-block team w-100" src="assets/imgs/team/hanen.jpg" alt="Second slide">
                     </div>
                   <div class="team-member-info text-center">
                     <h4 class="member-name mb-3">حنين احمد</h4>
@@ -28,7 +28,7 @@
 
             <div class="col-sm-4 animated bounceInRight">
                     <div class="carousel-item active">
-                      <img class="d-block w-100" src="assets/team3.png" alt="Third slide">
+                      <img class="d-block team w-100" src="assets/imgs/team/alaa.PNG" alt="Third slide">
                     </div>
                   <div class="team-member-info text-center">
                     <h4 class="member-name mb-3">الاء سعيد</h4>
