--- a/src/app/newestbooks/newestbooks.component.html
+++ b/src/app/newestbooks/newestbooks.component.html
@@ -19,8 +19,13 @@
               <i class="far fa-star"></i>
             </div>
               <h5 class="card-title text-right">{{newest.bname}} </h5>
-              <h6 class="text-right"> {{newest.aname}} </h6>
-              <h6 class="text-right">{{newest.datepublish}} </h6>
+              <div>
+                  <h6 class="text-right"> {{newest.aname}} </h6>
+                  <h6 class="text-right info">
+                      <i class="far fa-calendar-alt icons"></i>
+                    {{newest.datepublish}} </h6>
+              </div>
+              
           </div>
               <div class="addToCart">
                 <i class="fas fa-shopping-cart mr-2"></i>
