--- a/src/app/bestseller/bestseller.component.html
+++ b/src/app/bestseller/bestseller.component.html
@@ -18,8 +18,12 @@
                             <i class="far fa-star"></i>
                         </div>
                         <h5 class="card-title text-right">{{mostseller.bname}} </h5>
-                        <h6 class="text-right"> {{mostseller.aname}} </h6>
-                        <h6 class="text-right">{{mostseller.numselling}} </h6>
+                        <div>
+                                <h6 class="text-right"> {{mostseller.aname}} </h6>
+                                <h6 class="text-right info">
+                                        <i class="fas fa-tag icons"></i>
+                                        {{mostseller.numselling}} </h6>
+                        </div>  
                     </div>
                     <div class="addToCart">
                             <i class="fas fa-shopping-cart mr-2"></i>
@@ -28,4 +32,5 @@
                 </div>  
             </div>
         </div>
+
 </div>
