--- a/src/app/bestseller/bestseller.component.scss
+++ b/src/app/bestseller/bestseller.component.scss
@@ -47,6 +47,9 @@ img{
   opacity: 0.3;
   cursor: pointer;
 }
+.icons{
+	color: #177777;
+}
 .image-container:hover .overlay {
   opacity: 1;
 }
@@ -66,12 +69,12 @@ img{
 .card-body.p-0{
 	text-align:right;
 }
-.info{
-	float:left;
-}
 .rate{
 	float:left;
 	font-size: 0.8rem;
+}
+.info{
+	float:left;
 }
 .addToCart{
 	display:none;
