--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -38,37 +38,28 @@
     <div class="col-sm-3 text-right">
       <div class="row">
         <div class="col-12 mb-4">
-          <h3>السعر</h3>
-          <hr/>
-          <div id="slider-range"></div>
-             <div class="slidecontainer">
-             <span class="text-secondary">$50.0</span> 
-             <span class="float-right text-secondary">$890.0</span>
-          </div>
-        </div>
-        <div class="col-12 mb-4">
             <h3>فئه الكتاب</h3>
             <hr/>
-           <div><span>خيال علمى</span> <input type="checkbox" #cat1 (change)="submitData( 'خيال علمى' )" /></div>
-           <div> <span> دراما</span> <input type="checkbox" #cat2 (change)="submitData( 'دراما' )" /></div>
-           <div> <span> مغامرة</span> <input type="checkbox" #cat3 (change)="submitData( 'مغامر' )" /></div>
-           <div> <span> رومانسية</span> <input type="checkbox" #cat4 (change)="submitData( 'رومانسية' )" /></div>
-           <div> <span> غموض</span> <input type="checkbox" #cat5 (change)="submitData( 'غموض' )" /></div>
-           <div> <span> رعب</span> <input type="checkbox" #cat6 (change)="submitData( 'رعب' )" /></div>
-           <div> <span> دينية</span> <input type="checkbox" #cat7 (change)="submitData( 'دينية' )" /></div>
-           <div> <span> قصص قصيرة</span> <input type="checkbox" #cat8 (change)="submitData( 'قصص قصيرة' )" /></div>
-           <div> <span> تاريخ</span> <input type="checkbox" #cat9 (change)="submitData( 'تاريخ' )" /></div>  
+           <div><span>خيال علمى</span> <input type="radio" value="male" name="gender" #cat1 (change)="submitData( 'خيال علمى' )" /></div>
+           <div> <span> دراما</span> <input type="radio" value="male" name="gender" #cat2 (change)="submitData( 'دراما' )" /></div>
+           <div> <span> مغامرة</span> <input type="radio" value="male" name="gender" #cat3 (change)="submitData( 'مغامر' )" /></div>
+           <div> <span> رومانسية</span> <input type="radio" value="male" name="gender" #cat4 (change)="submitData( 'رومانسية' )" /></div>
+           <div> <span> غموض</span> <input type="radio" value="male" name="gender" #cat5 (change)="submitData( 'غموض' )" /></div>
+           <div> <span> رعب</span> <input type="radio" value="male" name="gender" #cat6 (change)="submitData( 'رعب' )" /></div>
+           <div> <span> دينية</span> <input type="radio" value="male" name="gender" #cat7 (change)="submitData( 'دينية' )" /></div>
+           <div> <span> قصص قصيرة</span> <input type="radio" value="male" name="gender" #cat8 (change)="submitData( 'قصص قصيرة' )" /></div>
+           <div> <span> تاريخ</span> <input type="radio" value="male" name="gender" #cat9 (change)="submitData( 'تاريخ' )" /></div>  
       </div>
       <div class="col-12 mb-4">
         <h3>الكاتب</h3>
         <hr/>
-        <div> <span> احسان عبد القدوس</span> <input type="checkbox" #au1 (change)="submitData( 'احسان عبد القدوس' )" /></div>
-        <div> <span> احلام مستغانمى</span> <input type="checkbox" #au2 (change)="submitData( 'احلام مستغانمى' )" /></div>
-        <div> <span> أحمد خالد توفيق</span> <input type="checkbox" #au3 (change)="submitData( 'أحمد خالد توفيق' )" /></div>
-        <div> <span>  أحمد مراد</span> <input type="checkbox" #au4 (change)="submitData( 'أحمد مراد' )" /></div>
-        <div> <span> عمر طاهر</span> <input type="checkbox" #au5 (change)="submitData( 'عمر طاهر' )" /></div>
-        <div> <span> محمد صادق</span> <input type="checkbox" #au6 (change)="submitData( 'محمد صادق' )" /></div>
-        <div> <span> نجيب محفوظ</span> <input type="checkbox" #au7 (change)="submitData( 'نجيب محفوظ' )" /></div>
+        <div> <span> احسان عبد القدوس</span> <input type="radio" value="male" name="gender" #au1 (change)="submitData( 'احسان عبد القدوس' )" /></div>
+        <div> <span> احلام مستغانمى</span> <input type="radio" value="male" name="gender" #au2 (change)="submitData( 'احلام مستغانمى' )" /></div>
+        <div> <span> أحمد خالد توفيق</span> <input type="radio" value="male" name="gender" #au3 (change)="submitData( 'أحمد خالد توفيق' )" /></div>
+        <div> <span>  أحمد مراد</span> <input type="radio" value="male" name="gender" #au4 (change)="submitData( 'أحمد مراد' )" /></div>
+        <div> <span> عمر طاهر</span> <input type="radio" value="male" name="gender" #au5 (change)="submitData( 'عمر طاهر' )" /></div>
+        <div> <span> محمد صادق</span> <input type="radio" value="male" name="gender" #au6 (change)="submitData( 'محمد صادق' )" /></div>
+        <div> <span> نجيب محفوظ</span> <input type="radio" value="male" name="gender" #au7 (change)="submitData( 'نجيب محفوظ' )" /></div>
       </div>
     </div>
   </div>
