--- a/src/app/famousauthors/famousauthors.component.html
+++ b/src/app/famousauthors/famousauthors.component.html
@@ -3,10 +3,10 @@
         <div class="col-lg-3 col-md-6 col-sm-8" *ngFor="let popularauthor of popularauthor">
             <div class="card mb-4">
                 <div class="image-container mb-3">
-                    <div class="overlay">	
-                        <i class="far fa-heart"></i>
-                        <button><i class="fas fa-shopping-cart"></i></button>
-                    </div>
+                    <!-- <div class="overlay">	 -->
+                        <!-- <i class="far fa-heart"></i> -->
+                        <!-- <button><i class="fas fa-shopping-cart"></i></button> -->
+                    <!-- </div> -->
                     <img class="card-img-top" src="{{popularauthor.img}}" class="img-fluid" alt="Card image cap">
                 </div>
                 <div class="card-body p-0"> 
@@ -19,12 +19,10 @@
                     </div>
                     <h5 class="card-title text-right">{{popularauthor.aname}} </h5>
                     <div>
-                        <h6 class="text-right">احلام مستغانمى</h6>
-                        <h6 class="text-right info">{{popularauthor.numbooks}} </h6>
-                    </div>
-                    <div class="addToCart">
-                        <i class="fas fa-shopping-cart mr-2"></i>
-                        <i class="far fa-heart"></i>
+                        
+                        <h6 class="text-right info">
+                                <i class="fas fa-book-open icons"></i>
+                                {{popularauthor.numbooks}} </h6>
                     </div>
                 </div>  
             </div>    
