--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -21,8 +21,11 @@
                       <i class="far fa-star"></i>
                     </div>
                     <h5 class="card-title text-right">{{catigoryData.bname}} </h5>
-                    <h6 class="text-right"> {{catigoryData.aname}} </h6>
-                    <h6 class="text-right">{{catigoryData.category}} </h6>
+                    <div>
+                        <h6 class="text-right"> {{catigoryData.aname}} </h6>
+                        <h6 class="text-right float-left">{{catigoryData.category}} </h6>
+                    </div>
+                    
                 </div>
                     <div class="addToCart">
                       <i class="fas fa-shopping-cart mr-2"></i>
@@ -55,8 +58,8 @@
         <hr/>
         <div> <span> احسان عبد القدوس</span> <input type="radio" value="male" name="gender" #au1 (change)="submitData( 'احسان عبد القدوس' )" /></div>
         <div> <span> احلام مستغانمى</span> <input type="radio" value="male" name="gender" #au2 (change)="submitData( 'احلام مستغانمى' )" /></div>
-        <div> <span> أحمد خالد توفيق</span> <input type="radio" value="male" name="gender" #au3 (change)="submitData( 'أحمد خالد توفيق' )" /></div>
-        <div> <span>  أحمد مراد</span> <input type="radio" value="male" name="gender" #au4 (change)="submitData( 'أحمد مراد' )" /></div>
+        <div> <span> أحمد خالد توفيق</span> <input type="radio" value="male" name="gender" #au3 (change)="submitData( 'احمد خالد توفيق' )" /></div>
+        <div> <span>  أحمد مراد</span> <input type="radio" value="male" name="gender" #au4 (change)="submitData( 'احمد مراد' )" /></div>
         <div> <span> عمر طاهر</span> <input type="radio" value="male" name="gender" #au5 (change)="submitData( 'عمر طاهر' )" /></div>
         <div> <span> محمد صادق</span> <input type="radio" value="male" name="gender" #au6 (change)="submitData( 'محمد صادق' )" /></div>
         <div> <span> نجيب محفوظ</span> <input type="radio" value="male" name="gender" #au7 (change)="submitData( 'نجيب محفوظ' )" /></div>
