--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -2,39 +2,39 @@
     <div class="text-center font-weight-bold section-header mb-5 "><p>فريق العمل</p></div>
     <div class="container">
         <div class="row col-sm-12">
-            <div class="col-sm-4 animated bounceInLeft">
+            <div class="col-sm-4 animated bounceInLeft mb-3">
                     <div class="carousel-item active">
                       <img class="d-block team w-100" src="assets/imgs/team/hayam.PNG" alt="First slide">
                     </div>
                   <div class="team-member-info text-center">
-                    <h4 class="member-name mb-3">هيام محفوظ</h4>
-                    <img src="assets/facebook.png">
-                    <img src="assets/twitter.png" class="ml-2 mr-2">
-                    <img src="assets/google.png">
+                    <h4 class="member-name mb-3 mt-2">هيام محفوظ</h4>
+                    <a href="https://www.instagram.com/"><img src="assets/facebook.png"></a>
+                    <a href="https://www.instagram.com/"><img src="assets/twitter.png" class="ml-2 mr-2"></a>
+                    <a href="https://www.instagram.com/"><img src="assets/google.png"></a>
                   </div> 
             </div>
 
-            <div class="col-sm-4 animated zoomIn">
+            <div class="col-sm-4 animated zoomIn mb-3">
                     <div class="carousel-item active">
                       <img class="d-block team w-100" src="assets/imgs/team/hanen.jpg" alt="Second slide">
                     </div>
                   <div class="team-member-info text-center">
-                    <h4 class="member-name mb-3">حنين احمد</h4>
-                    <img src="assets/facebook.png">
-                    <img src="assets/twitter.png" class="ml-2 mr-2">
-                    <img src="assets/google.png">
+                    <h4 class="member-name mb-3 mt-2">حنين احمد</h4>
+                    <a href="https://www.instagram.com/"><img src="assets/facebook.png"></a>
+                    <a href="https://www.instagram.com/"><img src="assets/twitter.png" class="ml-2 mr-2"></a>
+                    <a href="https://www.instagram.com/"><img src="assets/google.png"></a>
                   </div>
             </div>
 
-            <div class="col-sm-4 animated bounceInRight">
+            <div class="col-sm-4 animated bounceInRight ">
                     <div class="carousel-item active">
                       <img class="d-block team w-100" src="assets/imgs/team/alaa.PNG" alt="Third slide">
                     </div>
                   <div class="team-member-info text-center">
-                    <h4 class="member-name mb-3">الاء سعيد</h4>
-                    <img src="assets/facebook.png">
-                    <img src="assets/twitter.png" class="ml-2 mr-2">
-                    <img src="assets/google.png">
+                    <h4 class="member-name mb-3 mt-2">الاء سعيد</h4>
+                    <a href="https://www.instagram.com/"><img src="assets/facebook.png"></a>
+                    <a href="https://www.instagram.com/"><img src="assets/twitter.png" class="ml-2 mr-2"></a>
+                    <a href="https://www.instagram.com/"><img src="assets/google.png"></a>
                   </div> 
             </div>
 
