--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,14 +20,11 @@
 
 
 
-
- <app-nav></app-nav>
+<!--  -->
+ <!-- <app-nav></app-nav> -->
 <router-outlet></router-outlet>
 
- <app-footer></app-footer> 
-
  
-<!-- <app-book></app-book> -->
 <!-- <app-author></app-author> -->
 
 
@@ -37,3 +34,4 @@
 <app-side></app-side>
 <router-outlet></router-outlet>
  <app-foot></app-foot> -->
+ <!-- <app-footer></app-footer>  -->
