--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,3 +1,4 @@
+ <app-nav></app-nav>
 
 <section style="overflow-x:auto;" class="cart mt-5">
 <div class="container ">
@@ -44,3 +45,4 @@
 </div>
 </div>   
 </section>
+ <app-footer></app-footer> 
