--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,3 +1,5 @@
+ <app-nav></app-nav>
+
 <div class="container">
   <div class="row paytable">
       <div class="col-sm-12 col-md-10 col-lg-8 text-center">
@@ -107,3 +109,4 @@
   </div>
 </ng-template>
 
+ <app-footer></app-footer> 
