--- a/src/app/author/author.component.html
+++ b/src/app/author/author.component.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-sm-9 ">
                 <div class="float-right text-right mb-3">
-                     <span class="text-right"> {{catigoryData.stars}}
+                     <span class="text-right"> 
                             <i class="fas fa-star text-warning"></i>
                             <i class="fas fa-star text-warning"></i>
                             <i class="fas fa-star text-warning"></i>
@@ -13,7 +13,7 @@
                     </span>
                     
                     <span class="title1 ml-4">في ممر الفئران</span><br>
-                    <span>المؤلف : </span><span class="link">احمد خالد توفيق </span><br>
+                    <span>المؤلف : </span><span class="link"><a routerLink="/book">احمد خالد توفيق</a></span><br>
                     <span>تاريخ النشر : </span><span > 2018</span><br>
                     <span>  تصنيف الكتاب :</span><span  class="link"> روايات | قصص وروايات</span><br>
                     <span> الناشر : </span><span  class="link"> دار الكرمه للنشر والتوزيع </span><br>
@@ -24,8 +24,8 @@
  فإن وعينا يسافر لبعد آخر ليمارس حياة أخرى ويلقى أناسًا آخرين </span>
                 </div>
                 <div class="text-right ">
-                    <div class="cart-icon  d-inline-block p-2"><i class="fas fa-shopping-cart text-white rounded  pl-3 pr-3"></i></div>
-                    <div class="heart-icon d-inline-block ml-3 "><i class="fas fa-heart text-white  rounded   pl-3 pr-3"></i></div>
+                    <div  [swal]="['OK', 'تم اضافه كتاب اللي عربتك التسويقيه', 'success']" class="cart-icon  d-inline-block p-2"><i class="fas fa-shopping-cart text-white rounded  pl-3 pr-3"></i></div>
+                    <div  [swal]="['OK', 'تم اضافه كتاب المفضلات', 'success']" class="heart-icon d-inline-block ml-3 "><i class="fas fa-heart text-white  rounded   pl-3 pr-3"></i></div>
                 </div>      
             </div>
             <div class="col-sm-3">
@@ -55,7 +55,7 @@
                 <p class="text-right">
                         أصدقائي اي حدا حابب فعلا يشتغل اونلاين ويعمل 100$ يوميا واكثر دون
                          ان يتعرض لحالات التلاعب والسرقة يوجد مواقع فعلا حقيقة<br> وعالم حقيقين واموال حقيقية د الرائع</p><br>
-                <!-- <div class="float-right word "><span class=" ml-5 ">رد</span> <span  class="">اعجاب</span></div> -->
+                <div class="float-right word "><span class=" ml-5 ">رد</span> <span  class="">اعجاب</span></div>
             </div>
             <div class="col-sm-1  mt-3">
                     <img src="assets/comment1.jpg " class="img-fluid float-left comment2 ">
@@ -69,7 +69,7 @@
                             سنقوم بإدراج اخر تعديل تم على الموضوع بإذن الله 
                             موقعك جيد لكن الافضل استخدام العربية <br>بدلا من العامية المصرية
                             تمنياتى بالتوفيق وتقبل صداقتنا</p>
-                    <!-- <div class="float-right word"><span class=" ml-5 ">رد</span> <span  class="">اعجاب</span></div> -->
+                    <div class="float-right word"><span class=" ml-5 ">رد</span> <span  class="">اعجاب</span></div>
 
             </div>
              <div class="col-sm-2 mt-3 ">
