--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,3 +1,4 @@
+ <app-nav></app-nav>
 
 <div class="container mt-5">
   <div class="row">
@@ -21,15 +22,15 @@
     </div>
     <div class="col-sm-3 text-right">
       <div class="row">
-        <div class="col-12 mb-4">
+        <!-- <div class="col-12 mb-4">
           <h3>السعر</h3>
           <hr/>
           <div id="slider-range"></div>
-             <div class="slidecontainer">
+          <div class="slidecontainer">
              <span class="text-secondary">$50.0</span> 
              <span class="float-right text-secondary">$890.0</span>
           </div>
-        </div>
+        </div> -->
         <div class="col-12 mb-4">
             <h3>فئه الكتاب</h3>
             <hr/>
@@ -44,7 +45,7 @@
            <div> <span> تاريخ</span> <input type="checkbox"/></div>  
       </div>
       <div class="col-12 mb-4">
-        <h3>الكاتتب</h3>
+        <h3>الكاتب</h3>
         <hr/>
         <div> <span> احسان عبد القدوس</span> <input type="checkbox"/></div>
         <div> <span> احلام مستغانمى</span> <input type="checkbox"/></div>
@@ -57,3 +58,4 @@
     </div>
   </div>
 </div>
+ <app-footer></app-footer> 
