--- a/src/app/featured/featured.component.html
+++ b/src/app/featured/featured.component.html
@@ -1,42 +1,42 @@
-
-
 <div class="container mb-5 mt-5">
-    <ul class="nav nav-pills nav-fill">
-      <li class="nav-item" (click)="famousAuthorsRedirect()">
-        <a class="nav-link" href="#" routerLink="['famousauthors']">اشهر المؤلفين</a>
-      </li>
-      <li class="nav-item" (click)="mostDownloadedRedirect()">
-        <a class="nav-link " href="#" routerLink="['mostdownloaded']">الاكثر تحميلا</a>
-      </li>
-      <li class="nav-item" (click)="bestSellerRedirect()">
-        <a class="nav-link" href="#" routerLink="['bestseller']">الاكثر مبيعا</a>
-      </li>
-      <li class="nav-item" (click)="newestBooksRedirect()">
-        <a class="nav-link" href="#" routerLink="['newestbooks']">احدث الكتب</a>
-      </li>
-    </ul>
+  <div class="row">
+      <div class="col-lg-12">
+          <ul class="nav nav-pills nav-fill">
+              <li class="nav-item col-lg-3 col-sm-6" (click)="famousAuthorsRedirect()">
+                  <a class="nav-link" href="#" routerLink="['famousauthors']">اشهر المؤلفين</a>
+              </li>
+              <li class="nav-item col-lg-3 col-sm-6" (click)="mostDownloadedRedirect()">
+                  <a class="nav-link " href="#" routerLink="['mostdownloaded']">الاكثر تحميلا</a>
+              </li>
+              <li class="nav-item col-lg-3 col-sm-6" (click)="bestSellerRedirect()">
+                  <a class="nav-link" href="#" routerLink="['bestseller']">الاكثر مبيعا</a>
+              </li>
+              <li class="nav-item col-lg-3 col-sm-6" (click)="newestBooksRedirect()">
+                  <a class="nav-link" href="#" routerLink="['newestbooks']">احدث الكتب</a>
+              </li>
+          </ul>
+      </div>
   </div>
-  
-   <router-outlet></router-outlet>
-  
-  <nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center">
-      <li class="page-item disabled">
-          <a class="page-link" href="#" aria-label="Previous">
-          <span aria-hidden="true">&laquo;</span>
-          <span class="sr-only">Previous</span>
-      </a>
-      </li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
-      <li class="page-item">
-          <a class="page-link" href="#" aria-label="Next">
-          <span aria-hidden="true">&raquo;</span>
-          <span class="sr-only">Next</span>
-      </a>
-      </li>
-    </ul>
-  </nav>
-  
-  
+</div>
+
+<router-outlet></router-outlet>
+
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+    <li class="page-item disabled">
+        <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+            <span class="sr-only">Previous</span>
+        </a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+        <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+            <span class="sr-only">Next</span>
+        </a>
+    </li>
+  </ul>
+</nav>
