--- a/src/app/side/side.component.html
+++ b/src/app/side/side.component.html
@@ -10,9 +10,7 @@
         <p><a routerLink="/personal">المعلومات الشخصيه</a></p>
         <p><a routerLink="/myorder">سجل الطلبات</a></p>
         <p><a routerLink="/favourite">المفضلات</a></p>
-        <p> تسجيل الخروج</p>
-
-        <!-- <p><a routerLink="/logout"> تسجيل الخروج</a> </p> -->
+        <p><a routerLink="/"> تسجيل الخروج</a> </p>
 
       </div>
 
